# prima_datadog.rs

./: .drone.yml  .mise.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  backstage-config.yaml  catalog-info.yaml
.github/workflows/: cd.yml  ci.yml
benches/: basic_incr.rs  bench.rs
src/: client.rs  compare.rs  conf.rs  configuration.rs  error.rs  lib.rs  timing_guard.rs  tracker.rs
src/adapter/: dogstatsd_client.rs  mod.rs
src/configuration/: country.rs  env.rs  mod.rs  prima.rs  test.rs
src/macros/: async_time.rs  compare.rs  count.rs  decr.rs  distribution.rs  event.rs  event_with_options.rs  gauge.rs  histogram.rs  incr.rs  mod.rs  service_check.rs  set.rs  time.rs  timing.rs
src/tests/: compare.rs  count.rs  decr.rs  distribution.rs  event.rs  event_with_options.rs  gauge.rs  histogram.rs  incr.rs  mod.rs  service_check.rs  set.rs  tag_check.rs  time.rs  timing.rs  tracker.rs
src/tests/mocks/: dogstatsd_client.rs  hack.rs  mod.rs
tests/: count.rs  decr.rs  distribution.rs  end_to_end_runner.rs  event.rs  gauge.rs  histogram.rs  incr.rs  integration.rs  service_check.rs  set.rs  time.rs  timing.rs
tests/common/: mod.rs
tests/end_to_end/: event.rs  mod.rs  service_check.rs
tests/mocks/: mod.rs
