[package]
name = "prima_datadog"
version = "0.4.0"
edition = "2018"
description = "An opinionated library to share code and approach to Datadog logging in prima.it"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dogstatsd = { version = "0.7", default-features = false }
once_cell = { version = "1.9", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
serde = { version = "1", optional = true }

[dev-dependencies]
mockall = { version = "0.11", default-features = false }
serial_test = { version = "0.8.0", default-features = false }
criterion = "0.3"
serde_json = "1"

[[bench]]
name = "basic_incr"
harness = false

[package.metadata.docs.rs]
# Allows us to document items as only available with certain feature flags enabled
all-features = true
rustdoc-args = ["--cfg", "docsrs"]