[package]
name = "prima_datadog"
version = "0.5.0"
edition = "2018"
description = "An opinionated library to share code and approach to Datadog logging in prima.it"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dogstatsd = { version = "0.9.0", default-features = false }
once_cell = { version = "1.9", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
serde = { version = "1", optional = true }
async-trait = "0.1"

[dev-dependencies]
mockall = { version = "0.11", default-features = false }
serial_test = { version = "2.0.0", default-features = false }
criterion = "0.5"
serde_json = "1"
rand = "0.8.5"

[[bench]]
name = "basic_incr"
harness = false

[package.metadata.docs.rs]
# Allows us to document items as only available with certain feature flags enabled
all-features = true
rustdoc-args = ["--cfg", "docsrs"]