[package]
description = "An opinionated library to share code and approach to Datadog logging in prima.it"
edition = "2018"
license = "MIT"
name = "prima_datadog"
version = "0.8.0"

[features]
default = []

serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
dogstatsd = {version = "=0.12.1", default-features = false}
once_cell = {version = "1.9", default-features = false, features = ["std"]}
thiserror = {version = "1.0", default-features = false}

# Optional
serde = {version = "1", optional = true}

[dev-dependencies]
criterion = "0.5"
mockall = {version = "0.13", default-features = false}
rand = "0.8.5"
serial_test = {version = "3.0.0", default-features = false}

[[bench]]
harness = false
name = "basic_incr"

[package.metadata.docs.rs]
# Allows us to document items as only available with certain feature flags enabled
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
